--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -3,13 +3,16 @@ name: Android CI
 on:
   push:
     branches: [ main ]
+  pull_request:
+    branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
       
     - name: Set up JDK 17
       uses: actions/setup-java@v4
@@ -20,11 +23,15 @@ jobs:
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
       
-    - name: Build with Gradle
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+      
+    - name: Build Release APK
       run: ./gradlew assembleRelease
       
-    - name: Upload APK
+    - name: Upload APK Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: nebula-editor
+        name: nebula-editor-apk
         path: app/build/outputs/apk/release/app-release.apk
+        retention-days: 30
